// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchControls Component Snapshots basic snapshot 1`] = `
<Fragment>
  <h4>
    Step 1: Filter the Grade Report
  </h4>
  <div
    className="d-flex justify-content-between"
  >
    <Button
      active={false}
      className="btn-primary align-self-start"
      disabled={false}
      id="edit-filters-btn"
      onClick={[MockFunction toggleFilterDrawer]}
      variant="primary"
    >
      <withDeprecatedProps(Icon)
        className="fa fa-filter"
      />
       Edit Filters
    </Button>
    <div>
      <SearchField
        icons={
          Object {
            "clear": <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    352,
                    512,
                    Array [],
                    "f00d",
                    "M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z",
                  ],
                  "iconName": "times",
                  "prefix": "fas",
                }
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              swapOpacity={false}
              symbol={false}
              title=""
              transform={null}
            />,
            "submit": <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    512,
                    512,
                    Array [],
                    "f002",
                    "M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z",
                  ],
                  "iconName": "search",
                  "prefix": "fas",
                }
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              swapOpacity={false}
              symbol={false}
              title=""
              transform={null}
            />,
          }
        }
        inputLabel="Search for a learner"
        onBlur={[Function]}
        onChange={[Function]}
        onClear={[Function]}
        onFocus={[Function]}
        onSubmit={[Function]}
        screenReaderText={
          Object {
            "clearButton": "clear search",
            "label": "search",
            "submitButton": "submit search",
          }
        }
        value="alice"
      />
      <small
        className="form-text text-muted search-help-text"
      >
        Search by username, email, or student key
      </small>
    </div>
  </div>
</Fragment>
`;

exports[`SearchControls Component Snapshots show spinner 1`] = `
<Fragment>
  <h4>
    Step 1: Filter the Grade Report
  </h4>
  <div
    className="d-flex justify-content-between"
  >
    <div
      className="spinner-overlay"
    >
      <withDeprecatedProps(Icon)
        className="fa fa-spinner fa-spin fa-5x color-black"
      />
    </div>
    <Button
      active={false}
      className="btn-primary align-self-start"
      disabled={false}
      id="edit-filters-btn"
      onClick={[MockFunction toggleFilterDrawer]}
      variant="primary"
    >
      <withDeprecatedProps(Icon)
        className="fa fa-filter"
      />
       Edit Filters
    </Button>
    <div>
      <SearchField
        icons={
          Object {
            "clear": <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    352,
                    512,
                    Array [],
                    "f00d",
                    "M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z",
                  ],
                  "iconName": "times",
                  "prefix": "fas",
                }
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              swapOpacity={false}
              symbol={false}
              title=""
              transform={null}
            />,
            "submit": <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    512,
                    512,
                    Array [],
                    "f002",
                    "M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z",
                  ],
                  "iconName": "search",
                  "prefix": "fas",
                }
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              swapOpacity={false}
              symbol={false}
              title=""
              transform={null}
            />,
          }
        }
        inputLabel="Search for a learner"
        onBlur={[Function]}
        onChange={[Function]}
        onClear={[Function]}
        onFocus={[Function]}
        onSubmit={[Function]}
        screenReaderText={
          Object {
            "clearButton": "clear search",
            "label": "search",
            "submitButton": "submit search",
          }
        }
        value="alice"
      />
      <small
        className="form-text text-muted search-help-text"
      >
        Search by username, email, or student key
      </small>
    </div>
  </div>
</Fragment>
`;
